[gd_scene load_steps=20 format=3 uid="uid://by6d4rvhyjm5r"]

[ext_resource type="Script" uid="uid://bl6jcdl0q6ekt" path="res://Scripts/Menu Scripts/MainMenu.gd" id="1_h7084"]
[ext_resource type="FontFile" uid="uid://bug7cx68wokq8" path="res://Assets/Fonts/Poppins-Regular.ttf" id="2_kulhe"]
[ext_resource type="Texture2D" uid="uid://elhg8840d10" path="res://Assets/Sprite/KittyIdleSpriteSheet.png" id="4_h7084"]
[ext_resource type="Texture2D" uid="uid://fynl3palr22c" path="res://Assets/Buttons/Pets Button.png" id="4_uw0ty"]
[ext_resource type="Texture2D" uid="uid://bt14h402ktqfy" path="res://Assets/Buttons/Shop Button.png" id="5_ac4b6"]
[ext_resource type="Texture2D" uid="uid://cs5p12nam8wdq" path="res://Assets/Buttons/Options Button.png" id="6_x2cqt"]
[ext_resource type="Texture2D" uid="uid://bbbyohxwmgp8" path="res://Assets/Buttons/Back Button.png" id="7_5buhm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7hqe"]
bg_color = Color(0.9529412, 0.8901961, 0.77254903, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.9490196, 0.8509804, 0.6666667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2a13x"]
font = ExtResource("2_kulhe")
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dvr8"]
bg_color = Color(0.9529412, 0.8901961, 0.77254903, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.9490196, 0.8509804, 0.6666667, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw0ty"]
atlas = ExtResource("4_h7084")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac4b6"]
atlas = ExtResource("4_h7084")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2cqt"]
atlas = ExtResource("4_h7084")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_5buhm"]
atlas = ExtResource("4_h7084")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_et8ab"]
atlas = ExtResource("4_h7084")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fq4t"]
atlas = ExtResource("4_h7084")
region = Rect2(0, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_c61og"]
atlas = ExtResource("4_h7084")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqh14"]
atlas = ExtResource("4_h7084")
region = Rect2(640, 320, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_ooplh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw0ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac4b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2cqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5buhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et8ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fq4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c61og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqh14")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = -299.99988
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h7084")

[node name="Header" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 0
offset_left = -10.0
offset_top = -50.0
offset_right = 350.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c7hqe")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = -40.0
offset_right = 340.0
offset_bottom = 50.0
text = "Main Menu"
label_settings = SubResource("LabelSettings_2a13x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PetSlot" type="Panel" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -10.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 736.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5dvr8")

[node name="Kitty" type="AnimatedSprite2D" parent="."]
position = Vector2(35, -1)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_ooplh")
autoplay = "default"
flip_h = true

[node name="Kitty2" type="AnimatedSprite2D" parent="."]
position = Vector2(305, -1)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_ooplh")
autoplay = "default"

[node name="PetsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 200.0
offset_right = 234.0
offset_bottom = 232.0
texture_normal = ExtResource("4_uw0ty")

[node name="ShopButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 270.0
offset_right = 234.0
offset_bottom = 302.0
texture_normal = ExtResource("5_ac4b6")

[node name="OptionsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 340.0
offset_right = 234.0
offset_bottom = 372.0
texture_normal = ExtResource("6_x2cqt")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 410.0
offset_right = 234.0
offset_bottom = 442.0
texture_normal = ExtResource("7_5buhm")

[connection signal="pressed" from="PetsButton" to="." method="_on_pets_button_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
